# data-engineer-mini-project

./: README.md  requirements.txt
task_1/: pyproject.toml
task_1/src/etl_workflow/: constant.py  main_full.py  main_incremental.py
task_2/api/: models.py  serializers.py  urls.py  views.py
task_2/task_2/: asgi.py  settings.py  urls.py  wsgi.py
task_3/: package-lock.json  package.json
task_3/src/: App.css  App.js
